# pi

./: Cargo.nix  Cargo.toml  README.md  crate-hashes.json  egui_nodrag_plot.patch  flake.nix  rust.nix
crates/ingest/: Cargo.toml
crates/ingest/src/: handles.rs  lib.rs  process.rs  snapshot.rs  system.rs
crates/pi/: Cargo.toml
crates/pi/src/: main.rs  process.rs  show.rs  system.rs
crates/pi/src/query/: mod.rs  system.rs
crates/pi/src/system/: mod.rs  time_series.rs
crates/pi/src/view/: process.rs  system.rs
crates/procinfo/: Cargo.toml
crates/procinfo/src/: info.rs  ingest.rs  lib.rs  procfs.rs
crates/query/src/: lib.rs  process.rs
crates/sysinfo/: Cargo.toml
crates/sysinfo/src/: handles.rs  info.rs  lib.rs  series.rs  snapshot.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
src/: main.rs  snapshot.rs
src/view/: mod.rs  system.rs
