[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
eframe.workspace = true
egui_plot.workspace = true
ingest.workspace = true
procinfo.workspace = true
sysinfo.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
util.workspace = true
